# GQueryBuilder

./: LICENSE  README.md  gquery.py  pyproject.toml  requirements.txt  setup.py
src/: createquery.py  deletequery.py  gquery.py  readquery.py  updatequery.py
src/GQueryBuilder/: __init__.py  createquery.py  db.py  deletequery.py  gbase.py  gquery.py  readquery.py  tquery.py  updatequery.py
src/GQueryBuilder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/GQueryBuilder/equery/: entrycreate.py  entryquery.py  entryread.py  entryremove.py  entryupdate.py
src/GQueryBuilder/tquery/: tablecreate.py  tablequery.py  tableremove.py
src/GQueryBuilder/utils/: dbase.py  dbtools.py  logic.py
tests/: createquerytest.py  dbasetest.py  dbtoolstest.py  deletequerytest.py  entrycreatetest.py  entryquerytest.py  entryreadtest.py  entryremovetest.py  entryupdatetest.py  gbasetest.py  gquerytest.py  logictest.py  readquerytest.py  tablecreatetest.py  tablequerytest.py  tableremovetest.py  test_db.sqlite  test_db.sqlite-journal  tquerytest.py  updatequerytest.py
utils/: dbtools.py
