# pyproject.toml
[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "GQueryBuilder"
version = "1.0.2"
authors = [
    { name="gralito", email="gralito@protonmail.com" }
]
description = "A simple package to create and execute SQLite queries"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/gralito/GQueryBuilder"
"Bug Tracker" = "https://github.com/gralito/GQueryBuilder/issues"

[project.optional-dependencies]
dev = [
    "twine",
    "build"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["GQueryBuilder"]